--- a/pages/explore/explore.wxml
+++ b/pages/explore/explore.wxml
@@ -1,2 +1,4 @@
-<!--pages/explore/explore.wxml-->
-<text>pages/explore/explore.wxml</text>
+<!-- pages/explore/explore.wxml -->
+<view class="container">
+    
+</view>
