--- a/pages/explore/explore.wxss
+++ b/pages/explore/explore.wxss
@@ -2,6 +2,91 @@
 
 .view-change {
     text-align: right;
+    padding-right: 24rpx;
 }
 
-.view-change .iconfont {}
+.view-change .iconfont {
+    margin-right: 24rpx;
+    font-size: 28rpx;
+    color: #71768c;
+}
+.view-change .active{
+    color: #fff;
+}
+
+.content{
+    text-align: center;
+}
+
+.content .book-cover{
+    margin-top: 90rpx;
+}
+.book-cover image{
+    width: 390rpx;
+    height: 580rpx;
+}
+.content .book-detail{
+    width: 390rpx;
+    margin: auto;
+    border-bottom: 2rpx solid #2e3640;
+}
+.content .book-detail .book-name{
+    margin-top: 48rpx;
+}
+.content .book-detail .author{
+    margin-top: 34rpx;
+    margin-bottom: 72rpx;
+    color: #656a7b;
+    font-size: 28rpx;
+}
+.reader-wrap {
+    position: relative;
+}
+.reader-wrap .reader-list{
+    text-align: center;
+    margin-top: 48rpx;
+}
+.reader-wrap .reader-list .reader-item{
+    display: inline-block;
+    margin: 0px 6rpx;
+}
+.reader-wrap .reader-list .reader-item image{
+    width: 68rpx;
+    height: 68rpx;
+    border-radius: 50rpx;
+}
+.reader-wrap .count{
+    color: #a2a8ba;
+    text-align: center;
+    font-size: 24rpx;
+    margin-top: 38rpx;
+}
+.reader-wrap .count .num{
+    padding-right: 10rpx;
+}
+.reader-wrap .recommend{
+    width: 240rpx;
+    position: absolute;
+    right: 0rpx;
+    height: 84rpx;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-top-left-radius: 50rpx;
+    border-bottom-left-radius: 50rpx;
+    
+}
+.reader-wrap .recommend image{
+    width: 68rpx;
+    height: 68rpx;
+    border-radius: 50rpx;
+    margin: 8rpx;
+    
+}
+.reader-wrap .recommend .rec-name{
+    display: inline-block;
+    font-size: 28rpx;
+    transform: translateY(-14rpx);
+}
+.reader-wrap .recommend .rec-name .act{
+    color: #a2a8ba;
+    font-size: 24rpx;
+}
