--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,1 +1,128 @@
 /* pages/my/my.wxss */
+
+.header {
+    text-align: right;
+    padding-right: 48rpx;
+    box-sizing: border-box;
+    background: #21272e;
+    width: 100%;
+    position: fixed;
+    top: 0rpx;
+    right: 0rpx;
+    z-index: 1;
+}
+
+.user-wrap {
+    box-sizing: border-box;
+    padding: 0px 48rpx;
+    margin-top: 42rpx;
+    display: flow-root;
+}
+
+.user-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 52rpx;
+}
+
+.user-info .user-img {
+    margin-right: 34rpx;
+}
+
+.user-info .user-img image {
+    width: 240rpx;
+    height: 240rpx;
+}
+
+.user-info .user-msg {
+    margin-top: 35rpx;
+    flex: 1;
+}
+
+.user-info .user-msg .user-name {
+    font-size: 36rpx;
+    font-weight: bold;
+}
+
+.user-info .user-msg .user-site {
+    font-size: 28rpx;
+    color: #b5b7c5;
+    margin-top: 12rpx;
+}
+
+.user-info .share-wrap {
+    align-self: flex-end;
+    width: 176rpx;
+    height: 60rpx;
+    border: 2rpx solid #71768c;
+    text-align: center;
+    color: #71768c;
+    border-radius: 12rpx;
+}
+
+.user-info .share-wrap .icon-fenxiang {
+    line-height: 60rpx;
+    margin-right: 10rpx;
+}
+
+.user-info .share-wrap .share {
+    line-height: 60rpx;
+}
+
+.content-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    height: 126rpx;
+    background-color: #2b323b;
+    border-radius: 24rpx;
+    margin-bottom: 38rpx;
+}
+
+.content-wrap .line {
+    height: 80rpx;
+    border: 1rpx solid #363c45;
+}
+
+.content-wrap .item {
+    width: 30%;
+}
+
+.content-wrap .item .detail {
+    color: #75808d;
+    font-size: 28rpx;
+}
+
+.user-operation .operation-list .operation-item {
+    height: 140rpx;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    border-bottom: 2rpx solid #363c45;
+    color: #dcdeea;
+}
+.user-operation .operation-list .operation-item .option{
+    flex: 1;
+}
+
+.user-operation .operation-list .operation-item .iconfont {
+    font-size: 28rpx;
+    color: #a2a8ba;
+}
+
+.user-operation .operation-list .operation-item .message {
+    background-color: #fb6894;
+    width: 36rpx;
+    line-height: 36rpx;
+    text-align: center;
+    border-radius: 50rpx;
+    font-size: 24rpx;
+}
+.user-operation .operation-list .operation-item .balance{
+    margin-right: 10rpx;
+    color: #fb6894;
+}
+
+
+
