--- a/pages/bookrack/bookrack.wxss
+++ b/pages/bookrack/bookrack.wxss
@@ -1,1 +1,65 @@
 /* pages/bookrack/bookrack.wxss */
+.header {
+    text-align: right;
+    padding-right: 48rpx;
+    box-sizing: border-box;
+    background: #21272e;
+    width: 100%;
+    position: fixed;
+    top: 0rpx;
+    right: 0rpx;
+    z-index: 1;
+}
+.reading-wrap{
+    margin-bottom: 90rpx;
+}
+.reading-wrap .newest-wrap .new-list .new-list-item{
+    margin-bottom: 0rpx;
+}
+.unread-wrap .title-wrap{
+    margin-top: 0rpx;
+    
+}
+ .title-wrap {
+    width: 650rpx;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60rpx;
+    margin-bottom: 40rpx;
+    font-size: 36rpx;
+}
+
+.title-wrap .more-rank {
+    font-size: 24rpx;
+    color: #9da3b4;
+}
+.new-list {
+    box-sizing: border-box;
+    padding: 0px 48rpx;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.new-list .new-list-item {
+    margin-bottom: 70rpx;
+    margin-top: 16rpx;
+}
+
+.new-list .new-list-item image {
+    width: 192rpx;
+    height: 296rpx;
+    border-radius: 12rpx;
+}
+
+.new-list .new-list-item .book {
+    font-size: 26rpx;
+    margin-top: 30rpx;
+}
+
+.new-list .new-list-item .author-name {
+    font-size: 26rpx;
+    color: #5d637c;
+}
