--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,58 @@
-<!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<!-- pages/my/my.wxml -->
+<view class="header">
+    <text class="iconfont icon-shezhi"></text>
+</view>
+<view class="user-wrap">
+    <view class="user-info">
+        <view class="user-img">
+            <image src="../images/user-5.png" />
+        </view>
+        <view class="user-msg">
+            <view class="user-name">李雪玲</view>
+            <view class="user-site">中国·襄阳</view>
+        </view>
+        <view class="share-wrap">
+            <text class="iconfont icon-fenxiang"></text>
+            <text class="share">分享</text>
+        </view>
+    </view>
+    <view class="content-wrap">
+        <view class="item">
+            <view class="number">1286</view>
+            <view class="detail">关注</view>
+        </view>
+        <view class="item">
+            <view class="number">3368</view>
+            <view class="detail">粉丝</view>
+        </view>
+        <view class="line"></view>
+        <view class="line"></view>
+        <view class="item">
+            <view class="number">6673</view>
+            <view class="detail">喜欢</view>
+        </view>
+    </view>
+    <view class="user-operation">
+        <view class="operation-list">
+            <navigator>
+                <view class="operation-item">
+                    <text class="option">个人信息</text>
+                    <text class="iconfont icon-zuo"></text>
+                </view>
+            </navigator>
+            <view class="operation-item">
+                <text class="option">我的消息</text>
+                <text class="message">6</text>
+            </view>
+            <view class="operation-item">
+                <text class="option">账户余额</text>
+                <text class="balance">1375.00</text>
+                <text class="iconfont icon-zuo"></text>
+            </view>
+            <view class="operation-item">
+                <text class="option">我的评论</text>
+                <text class="iconfont icon-zuo"></text>
+            </view>
+        </view>
+    </view>
+</view>
