--- a/pages/classify/classify.wxss
+++ b/pages/classify/classify.wxss
@@ -1,1 +1,30 @@
 /* pages/classify/classify.wxss */
+.scarch-wrapper {
+    position: relative;
+}
+.scarch-wrapper .scarch-input {
+    width: 650rpx;
+    height: 96rpx;
+    margin: auto;
+    position: relative;
+}
+.scarch-wrapper .scarch-input input {
+    height: 95rpx;
+    background: #2d353d;
+    border-radius: 50rpx;
+    padding-left: 85rpx;
+}
+.scarch-wrapper .scarch-input .place {
+    color: #9da3b4;
+    font-size: 32rpx;
+}
+.scarch-wrapper .scarch-input .icon-sousuo {
+    color: #9da3b4;
+    margin-left: 28rpx;
+    position: absolute;
+    top: 26rpx;
+    font-size: 40rpx;
+}
+.sort-wrap .sort-list .sort-item{
+    width: 130rpx;
+}
