--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,7 +20,7 @@
     <view class="class-ranking-wrap">
         <view class="title-wrap">
             <text class="title">分类排行</text>
-            <navigator class="more-rank" url="">
+            <navigator class="more-rank" url="../classify/classify">
                 <text class="" decode="true">查看全部&emsp;></text>
             </navigator>
         </view>
