--- a/pages/authordetail/authordetail.wxss
+++ b/pages/authordetail/authordetail.wxss
@@ -1,4 +1,3 @@
-
 .author-wrap {
     box-sizing: border-box;
     padding: 0px 48rpx;
@@ -10,7 +9,8 @@
     margin-bottom: 52rpx;
     display: flow-root;
 }
-.author-info .wrapper{
+
+.author-info .wrapper {
     float: left;
 }
 
@@ -38,9 +38,11 @@
     color: #b5b7c5;
     margin-top: 12rpx;
 }
-.author-info .btn-wrap{
+
+.author-info .btn-wrap {
     margin-top: 55rpx;
 }
+
 .author-info .share-wrap {
     width: 176rpx;
     height: 60rpx;
@@ -51,6 +53,7 @@
     display: inline-block;
     margin-right: 25rpx;
 }
+
 .author-info .focus-wrap {
     width: 176rpx;
     line-height: 60rpx;
@@ -77,7 +80,7 @@
     height: 126rpx;
     background-color: #2b323b;
     border-radius: 24rpx;
-    margin-bottom: 38rpx;
+    margin-bottom: 70rpx;
 }
 
 .content-wrap .line {
@@ -94,6 +97,58 @@
     font-size: 28rpx;
 }
 
+.production-wrap .title-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 66rpx;
+}
 
+.count {
+    font-size: 24rpx;
+    color: #478ce0;
+}
 
+.production-wrap .production-list .production-item .cover {
+    float: left;
+    margin-right: 32rpx;
+}
 
+.production-wrap .production-list .production-item .cover image {
+    width: 168rpx;
+    height: 250rpx;
+}
+
+.production-wrap .production-item {
+    display: flow-root;
+    padding-bottom: 48rpx;
+    border-bottom: 2rpx solid #2b323b;
+    margin-bottom: 50rpx;
+}
+
+.production-item .book-detail {
+    display: flow-root;
+}
+
+.production-item .book-detail .book-name {
+    margin-top: 30rpx;
+}
+
+.production-item .book-detail .score-wrap .iconfont {
+    margin: 0rpx 4rpx;
+    color: #fb6894;
+    font-size: 28rpx;
+}
+
+.production-item .book-detail .score-wrap .score {
+    font-size: 36rpx;
+    color: #ffce44;
+    margin-left: 32rpx;
+}
+
+.production-item .book-detail .detail {
+    color: #868dab;
+    font-size: 24rpx;
+    margin-top: 10rpx;
+    margin-bottom: 20rpx;
+}
